--- a/app/design/frontend/base/default/layout/paymentmodule.xml
+++ b/app/design/frontend/base/default/layout/paymentmodule.xml
@@ -72,7 +72,7 @@
         <reference name="customer_account_navigation">
             <action method="addLink" translate="label" module="paymentmodule">
                 <name>paymentmodule</name>
-                <path>mundipagg/wallet/</path>
+                <path>mp-paymentmodule/wallet/</path>
                 <label>My cards</label>
             </action>
         </reference>
