:bug: fix saved card to guest

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -203,7 +203,10 @@
         <br>
     </div>
 
-    <?php if ($isSavedCreditCardsEnabled) : ?>
+    <?php
+        $isLogged = $this->helper('customer')->isLoggedIn();
+        if ($isLogged && $isSavedCreditCardsEnabled) :
+    ?>
     <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
         <br>
         <input
