--- a/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
@@ -14,7 +14,7 @@
                 </ul>
             </div>
             <br />
-            <form>
+            <form >
                 <fieldset>
                     <div>How would you like to <strong><span class="charge-operation"></span></strong> this charge?</div>
                     <br />
@@ -53,7 +53,7 @@
             </form>
         </div>
         <div class="read-more button-set">
-            <button class="form-button"><span class="charge-operation"></span> Charge</button>
+            <button class="form-button" onclick="confirmChargeOperation();"><span class="charge-operation"></span> Charge</button>
             <button class="form-button back" onclick="hideChargeDialog();">
                 Close
             </button>
