:sparkles: total and partial capture implemented

--- a/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
@@ -62,5 +62,6 @@
 </div>
 
 <script>
-    var currentOrderId = <?php echo $this->getOrderId(); ?> ;
+    var currentOrderId = <?php echo $this->getOrderId(); ?>;
+    document.getElementById('charge-dialog').hide();
 </script>
