:sparkles: admin password is now required to capture/cancel

--- a/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
@@ -63,5 +63,6 @@
 
 <script>
     var currentOrderId = <?php echo $this->getOrderId(); ?>;
+    var currentUsername = '<?php echo $this->getAdminUsername(); ?>';
     document.getElementById('charge-dialog').hide();
 </script>
