--- a/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
@@ -1,40 +1,40 @@
 <div id="message-popup-window-mask" style="height:100%; display:none"></div>
 <div id="charge-dialog" class="message-popup show">
     <div class="message-popup-head">
-        <h2><span class="charge-operation"></span> Charge</h2>
+        <h2><?php echo $this->__("<span class='charge-operation'></span> Charge");?></h2>
     </div>
     <div class="message-popup-content">
         <div class="message">
             <div>
-                <h3>Charge Information:</h3>
+                <h3><?php echo $this->__('Charge Information');?>:</h3>
                 <ul>
                     <li>Id: <strong><span id="charge-id"></span></strong></li>
-                    <li>Value: <strong><span id="charge-stringValue"></span></strong></li>
-                    <li>Payment Method: <strong><span id="charge-typeName"></span></strong></li>
+                    <li><?php echo $this->__('Value');?>: <strong><span id="charge-stringValue"></span></strong></li>
+                    <li><?php echo $this->__('Payment Method');?>: <strong><span id="charge-typeName"></span></strong></li>
                 </ul>
             </div>
             <br />
             <form >
                 <fieldset>
-                    <div>How would you like to <strong><span class="charge-operation"></span></strong> this charge?</div>
+                    <div><?php echo $this->__("How would you like to <strong><span class='charge-operation'></span></strong> this charge?");?></div>
                     <br />
                     <div>
                         <label>
                             <input type="radio" name="total_or_partial" class="total_or_partial" checked="" value="total">
-                            <span>Total <span class="charge-operation"></span></span>
+                            <span><?php echo $this->__("Total <span class='charge-operation'></span>");?></span>
                         </label>
                     </div>
                     <div>
                         <label>
                             <input type="radio" name="total_or_partial" class="total_or_partial" value="partial">
-                            <span>Partial <span class="charge-operation"></span></span>
+                            <span><?php echo $this->__("Partial <span class='charge-operation'></span>");?></span>
                         </label>
                     </div>
                     <div id="charge-operation-value-wrapper" style='display:none'>
                         <br/>
                         <div>
                             <label>
-                                <span>Value to <span class="charge-operation"></span>:</span>
+                                <span><?php echo $this->__("Value to <span class='charge-operation'></span>");?>:</span>
                                 <input type="number" min="0" step='.01' name="charge-operation-value" id="charge-operation-value">
                             </label>
                         </div>
@@ -44,7 +44,7 @@
                 <hr />
                 <br />
                 <fieldset>
-                    <div>To continue this operation, please enter your password:</div>
+                    <div><?php echo $this->__("To continue this operation, please enter your password");?>:</div>
                     <div>
                         <input type="password" name="charge-operation-credential" id="charge-operation-credential">
                     </div>
@@ -54,9 +54,9 @@
         </div>
         <div id="charge-dialog-errors" class="notification-global notification-global-warning"></div>
         <div class="read-more button-set">
-            <button class="form-button" onclick="confirmChargeOperation();"><span class="charge-operation"></span> Charge</button>
+            <button class="form-button" onclick="confirmChargeOperation();"><?php echo $this->__("<span class='charge-operation'></span> Charge");?></button>
             <button class="form-button back" onclick="hideChargeDialog();">
-                Close
+                <?php echo $this->__("Close");?>
             </button>
         </div>
     </div>
