--- a/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/chargePopup.phtml
@@ -1,7 +1,9 @@
 <div id="message-popup-window-mask" style="height:100%; display:none"></div>
 <div id="charge-dialog" class="message-popup show">
     <div class="message-popup-head">
-        <h2><?php echo $this->__("<span class='charge-operation'></span> Charge");?></h2>
+        <h2>
+            <?php echo $this->__("<span class='charge-operation'></span> Charge");?>
+        </h2>
     </div>
     <div class="message-popup-content">
         <div class="message">
@@ -9,33 +11,76 @@
                 <h3><?php echo $this->__('Charge Information');?>:</h3>
                 <ul>
                     <li>Id: <strong><span id="charge-id"></span></strong></li>
-                    <li><?php echo $this->__('Value');?>: <strong><span id="charge-stringValue"></span></strong></li>
-                    <li><?php echo $this->__('Payment Method');?>: <strong><span id="charge-typeName"></span></strong></li>
+                    <li>
+                        <?php echo $this->__('Value');?>:
+                        <strong><span id="charge-stringValue"></span></strong>
+                    </li>
+                    <li>
+                        <?php echo $this->__('Payment Method');?>:
+                        <strong><span id="charge-typeName"></span></strong>
+                    </li>
                 </ul>
             </div>
             <br />
             <form >
                 <fieldset>
-                    <div><?php echo $this->__("How would you like to <strong><span class='charge-operation'></span></strong> this charge?");?></div>
+                    <div>
+                        <?php echo $this->__(
+                            "How would you like to " .
+                            "<strong>" .
+                                "<span class='charge-operation'></span>" .
+                            "</strong>" .
+                            " this charge?");
+                        ?>
+                    </div>
                     <br />
                     <div>
                         <label>
-                            <input type="radio" name="total_or_partial" class="total_or_partial" checked="" value="total">
-                            <span><?php echo $this->__("Total <span class='charge-operation'></span>");?></span>
+                            <input
+                                    type="radio"
+                                    name="total_or_partial"
+                                    class="total_or_partial"
+                                    checked=""
+                                    value="total"
+                            >
+                            <span>
+                                <?php echo $this->__(
+                                    "Total <span class='charge-operation'></span>"
+                                ); ?>
+                            </span>
                         </label>
                     </div>
                     <div>
                         <label>
-                            <input type="radio" name="total_or_partial" class="total_or_partial" value="partial">
-                            <span><?php echo $this->__("Partial <span class='charge-operation'></span>");?></span>
+                            <input
+                                    type="radio"
+                                    name="total_or_partial"
+                                    class="total_or_partial"
+                                    value="partial"
+                            >
+                            <span>
+                                <?php echo $this->__(
+                                    "Partial <span class='charge-operation'></span>"
+                                );?>
+                            </span>
                         </label>
                     </div>
                     <div id="charge-operation-value-wrapper" style='display:none'>
                         <br/>
                         <div>
                             <label>
-                                <span><?php echo $this->__("Value to <span class='charge-operation'></span>");?>:</span>
-                                <input type="number" min="0" step='.01' name="charge-operation-value" id="charge-operation-value">
+                                <span>
+                                    <?php echo $this->__(
+                                        "Value to <span class='charge-operation'></span>"
+                                    );?>:
+                                </span>
+                                <input
+                                        type="number"
+                                        min="0"
+                                        step='.01'
+                                        name="charge-operation-value"
+                                        id="charge-operation-value"
+                                >
                             </label>
                         </div>
                     </div>
@@ -44,17 +89,32 @@
                 <hr />
                 <br />
                 <fieldset>
-                    <div><?php echo $this->__("To continue this operation, please enter your password");?>:</div>
+                    <div><?php echo $this->__(
+                        "To continue this operation, please enter your password"
+                        );?>:
+                    </div>
                     <div>
-                        <input type="password" name="charge-operation-credential" id="charge-operation-credential">
+                        <input
+                                type="password"
+                                name="charge-operation-credential"
+                                id="charge-operation-credential"
+                        >
                     </div>
                 </fieldset>
                 <br />
             </form>
         </div>
-        <div id="charge-dialog-errors" class="notification-global notification-global-warning"></div>
+        <div
+                id="charge-dialog-errors"
+                class="notification-global notification-global-warning"
+        ></div>
         <div class="read-more button-set">
-            <button class="form-button" onclick="confirmChargeOperation();"><?php echo $this->__("<span class='charge-operation'></span> Charge");?></button>
+            <button
+                    class="form-button"
+                    onclick="confirmChargeOperation();"
+            >
+                <?php echo $this->__("<span class='charge-operation'></span> Charge");?>
+            </button>
             <button class="form-button back" onclick="hideChargeDialog();">
                 <?php echo $this->__("Close");?>
             </button>
@@ -69,7 +129,15 @@
     <div class="message-popup-content">
         <div class="message">
             <div style="text-align: center">
-                <img src="<?php echo $this->getSkinUrl('images/ajax-loader-tr.gif', array('_secure'=>true));?>" alt="loader">
+                <img
+                    src=
+                    "<?php echo $this->getSkinUrl(
+                            'images/ajax-loader-tr.gif',
+                            array('_secure'=>true)
+                    );
+                    ?>"
+                    alt="loader"
+                >
             </div>
         </div>
     </div>
