:bug: Remove not used cpf field.

--- a/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/checkout/information.phtml
@@ -6,7 +6,7 @@
             <?php
                 echo sprintf(
                     $this->__(
-                        "Click <a href='%s'>here</a>" .
+                        "Click <a href='%s' target='__blank'>here</a>" .
                         " to show your billet for <strong>%s %s</strong> payment."
                     ),
                     $billet['url'],
