:bug: Get CPF from multibuyer.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
@@ -36,7 +36,7 @@
                 type="text"
                 id="<?php echo "$elementId"?>_multi_buyer_email"
                 name="payment[<?php echo "$elementId"?>_multiBuyerEmail]"
-                class="required-entry"
+                class="required-entry validate-email"
                 value="">
     </div>
 
