:bug: Fix Undefined index

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
@@ -2,6 +2,7 @@
     $_code = $this->getCode();
     $elementIndex = $this->getParentIndex();
     $elementId = $_code . "_".$this->getParentElement() ."_". $elementIndex;
+    $elementClass = $_code . "_".$this->getParentElement();
     $countryCollection = $this->getCountryCollection();
 ?>
 
