:sparkles: Hide payment index when is single payment.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/boleto.phtml
@@ -3,13 +3,15 @@
     $elementIndex = $this->getElementIndex();
     $elementId = $_code . "_boleto_". $elementIndex;
     $elementClass = $_code . "_boleto";
-    $showValueInput = $this->getShowValueInput();
+    $isMultiPayment = $this->getShowValueInput();
     $grandTotal = $this->getGrandTotal();
 ?>
 
 <div class="input-box">
-    <h6><?php echo $this->__('Billet') . ' ' . $elementIndex; ?></h6>
-    <?php if($showValueInput === true) : ?>
+    <?php if ($isMultiPayment) { ?>
+        <h6><?php echo $this->__('Billet') . ' ' . $elementIndex; ?></h6>
+    <?php } ?>
+    <?php if($isMultiPayment === true) : ?>
         <div class="input-box">
             <label><?php echo $this->__('Value'); ?> (Ex: 100.50)<span class="required"></span></label><br/>
             <input
