--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/multibuyer.phtml
@@ -41,15 +41,27 @@
                 value="">
     </div>
 
+    <div class="input-box">
+        <label><?php echo $this->__('Phone'); ?> <span class="required"></span></label><br/>
+        <input
+                type="text"
+                id="<?php echo "$elementId"?>_multi_buyer_phone"
+                name="payment[<?php echo "$elementId"?>_multiBuyerPhone]"
+                class="required-entry"
+                value="">
+    </div>
+
+    <div class="input-box">
     <label><?php echo $this->__('Tax/VAT'); ?><span class="required"></span></label><br/>
-    <input
-            type="text"
-            id="<?php echo $elementId; ?>_multi_buyer_taxvat"
-            name="payment[<?php echo $elementId; ?>_multiBuyerTaxvat]"
-            class="<?php echo $elementClass; ?>_validate-mundipagg-cpf required-entry"
-            onkeyup="validateTaxVat(this)"
-            maxlength="14"
-    />
+        <input
+                type="text"
+                id="<?php echo $elementId; ?>_multi_buyer_taxvat"
+                name="payment[<?php echo $elementId; ?>_multiBuyerTaxvat]"
+                class="<?php echo $elementClass; ?>_validate-mundipagg-cpf required-entry"
+                onkeyup="validateTaxVat(this)"
+                maxlength="14"
+        />
+    </div>
 
     <div class="input-box">
         <label><?php echo $this->__('Zipcode'); ?> <span class="required"></span></label><br/>
