:bug: Remove browser console error changing duplicated element id for class using.

--- a/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
@@ -3,6 +3,7 @@ $_code = $this->getMethodCode();
 $structure = $this->getStructure();
 $orderTotal = $this->getGrandTotal();
 ?>
+
 <fieldset>
     <ul id="payment_form_<?php echo $_code; ?>" style="display:none;">
         <li>
@@ -25,7 +26,7 @@ $orderTotal = $this->getGrandTotal();
                         <br /><hr />
                     </li>
                     <?php endforeach; ?>
-                    <input type="hidden" id="baseUrl" value="<?php echo Mage::getUrl('');?>"/>
+                    <input type="hidden" class="baseUrl" value="<?php echo Mage::getUrl('');?>"/>
                 </ul>
             </div>
         </li>
