--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/voucher.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/voucher.phtml
@@ -9,26 +9,27 @@ $savedCreditCards = $this->getSavedCreditCards();
 $isSavedCreditCardsEnabled = $this->isSavedCreditCardsEnabled();
 $enabledBrands = $this->getEnabledBrands();
 
-$new = '';
-if ($savedCreditCards) {
-    $new = "style='display: none'";
-}
+    $new = '';
+    if ($savedCreditCards) {
+        $new = "style='display: none'";
+    }
 ?>
 
-<div class="input-box <?php echo "$elementClass"?>tokenDiv"
+<div class="input-box <?php echo "$elementClass"?>_tokenDiv"
      id="<?php echo "$elementId"?>_tokenDiv"
      data-mundicheckout-app-id="<?php echo $this->getPublicKey(); ?>">
+
     <?php if ($isMultiPayment) { ?>
         <h6><?php echo $this->__('Voucher') . ' ' . $elementIndex; ?></h6>
     <?php } ?>
 
     <div class="input-box">
         <?php
-        $brandUrl = 'https://dashboard.mundipagg.com/emb/images/brands/';
+            $brandUrl = 'https://dashboard.mundipagg.com/emb/images/brands/';
 
-        foreach ($enabledBrands as $brand) {
-            $brandImage = $brandUrl . $brand . '.jpg';
-            ?>
+            foreach ($enabledBrands as $brand) {
+                $brandImage = $brandUrl . $brand . '.jpg';
+        ?>
             <img
                 src="<?php echo $brandImage; ?>"
                 class="mundipagg-brand-image <?php echo $brand; ?>"
@@ -120,7 +121,7 @@ if ($savedCreditCards) {
     <label
             for="<?php echo "$elementId"?>_mundicheckout-holdername"
             class="newCreditCard-<?php echo $elementId?>"
-        <?php echo $new; ?>
+            <?php echo $new; ?>
     ><?php echo $this->__('Holder Name'); ?><span class="required"></span></label>
     <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
         <input
@@ -135,7 +136,7 @@ if ($savedCreditCards) {
     <label
             for="<?php echo "$elementId"?>_mundicheckout-expmonth"
             class="newCreditCard-<?php echo $elementId?>"
-        <?php echo $new; ?>
+            <?php echo $new; ?>
     ><?php echo $this->__('Expiration date'); ?><span class="required"></span></label>
     <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
         <div class="v-fix">
@@ -176,8 +177,8 @@ if ($savedCreditCards) {
             id="<?php echo "$elementId"?>_mundicheckout-expiration-date"><br>
 
     <label
-            for="<?php echo "$elementId"?>_mundicheckout-cvv"
-            class="newCreditCard-<?php echo $elementId?>"
+        for="<?php echo "$elementId"?>_mundicheckout-cvv"
+        class="newCreditCard-<?php echo $elementId?>"
         <?php echo $new; ?>
     >CVV<span class="required">*</span></label>
     <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
@@ -193,20 +194,20 @@ if ($savedCreditCards) {
     </div>
 
     <?php
-    $isLogged = $this->helper('customer')->isLoggedIn();
-    if ($isLogged && $isSavedCreditCardsEnabled) :
-        ?>
-        <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
-            <br>
-            <input
-                    type="checkbox"
-                    id="<?php echo "$elementId"?>_mundicheckout-save-credit-card"
-                    name="payment[<?php echo "$elementId"?>_saveCreditCard]"
-                    onchange="toogleSavedCreditCard('<?php echo "$elementId"?>');"
-            >
-            <label for="<?php echo "$elementId"?>_mundicheckout-save-credit-card"><?php echo $this->__('Save this card to future orders'); ?></label>
-            <br>
-        </div>
+        $isLogged = $this->helper('customer')->isLoggedIn();
+        if ($isLogged && $isSavedCreditCardsEnabled) :
+    ?>
+    <div class="input-box newCreditCard-<?php echo $elementId?>" <?php echo $new; ?>>
+        <br>
+        <input
+                type="checkbox"
+                id="<?php echo "$elementId"?>_mundicheckout-save-credit-card"
+                name="payment[<?php echo "$elementId"?>_saveCreditCard]"
+                onchange="toogleSavedCreditCard('<?php echo "$elementId"?>');"
+        >
+        <label for="<?php echo "$elementId"?>_mundicheckout-save-credit-card"><?php echo $this->__('Save this card to future orders'); ?></label>
+        <br>
+    </div>
     <?php endif; ?>
 
     <input
