:bug: Fix brand exibition.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -23,7 +23,7 @@
         <h6><?php echo $this->__('Credit Card') . ' ' . $elementIndex; ?></h6>
     <?php } ?>
 
-    <div class="input-box">
+    <div class="input-box" id="<?php echo "$elementId"?>_brandDiv">
         <?php
             $brandUrl = 'https://dashboard.mundipagg.com/emb/images/brands/';
 
