:bug: Fix wrong grand total on installments select.

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -57,10 +57,12 @@
     <?php else: ?>
         <div class="input-box">
             <input
-                    type="hidden"
-                    id="<?php echo $elementId; ?>_value"
-                    name="payment[<?php echo $elementId; ?>_value]"
-                    value="<?php echo $grandTotal; ?>">
+                type="hidden"
+                id="<?php echo $elementId; ?>_value"
+                name="payment[<?php echo $elementId; ?>_value]"
+                value="<?php echo $grandTotal; ?>"
+                class="mundipagg-grand-total"
+            >
         </div>
     <?php endif; ?>
 
