--- a/app/design/adminhtml/default/default/layout/paymentmodule.xml
+++ b/app/design/adminhtml/default/default/layout/paymentmodule.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout version="0.1.0">
+
+    <default>
+        <reference name="notifications">
+                <block type="paymentmodule/adminhtml_notification_integrityviolation"></block>
+        </reference>
+    </default>
+
     <adminhtml_sales_order_view translate="label">
         <reference name="before_body_end">
             <block type="page/html_head" name="mp-paymentmodule-charge-controller" as="mp-paymentmodule-charge-controller" after="-" template="paymentmodule/extras.phtml">
@@ -10,6 +17,6 @@
             </block>
             <block type="paymentmodule/adminhtml_order_charge_popup" name="mp-test" as="mp-test" after="-"></block>
         </reference>
-
     </adminhtml_sales_order_view>
+
 </layout>
