:bug: Fix incompatibilities with other payment methods

--- a/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/partial/creditcard.phtml
@@ -184,7 +184,7 @@
                 name="payment[<?php echo "$elementId"?>_creditCardInstallments]"
                 id="<?php echo "$elementId"?>_mundicheckout-creditCard-installments"
                 onchange="getFormData('<?php echo $elementId?>');"
-                class="required-entry
+                class="required-entry"
         >
             <option value=""><?php echo $this->__('Fill the card number'); ?></option>
         </select>
