--- a/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/builder.phtml
@@ -3,7 +3,7 @@ $_code = $this->getMethodCode();
 $structure = $this->getStructure();
 $orderTotal = $this->getGrandTotal();
 
-$url = explode("?__", Mage::getUrl(''));
+$url = explode("?", Mage::getUrl(''));
 $url = $url[0];
 
 ?>
