:sparkles: Starting hub integration

--- a/app/design/adminhtml/default/default/layout/paymentmodule.xml
+++ b/app/design/adminhtml/default/default/layout/paymentmodule.xml
@@ -19,4 +19,23 @@
         </reference>
     </adminhtml_sales_order_view>
 
+    <adminhtml_system_config_edit translate="label">
+        <reference name="before_body_end">
+            <block type="page/html_head" name="mp-paymentmodule-config" as="mp-paymentmodule-config" after="-" template="paymentmodule/extras.phtml">
+                <action method="addItem">
+                    <type>js</type>
+                    <name>mundipagg/hub.min.js</name>
+                </action>
+                <action method="addJs">
+                    <script>lib/jquery/jquery-1.12.0.min.js</script>
+                </action>
+                <action method="addJs"><script>lib/jquery/noconflict.js</script></action>
+                <action method="addItem">
+                    <type>js</type>
+                    <name>mundipagg/hubIntegration.js</name>
+                </action>
+
+            </block>
+        </reference>
+    </adminhtml_system_config_edit>
 </layout>
