--- a/app/design/adminhtml/default/default/template/paymentmodule/extras.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/extras.phtml
@@ -1,1 +1,9 @@
 <?php echo $this->getCssJsHtml(); ?>
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        initHub(
+            'magento', //@todo
+            'en-us' //@todo
+        )
+    });
+</script>
