:ok_hand: Code Review

--- a/app/design/adminhtml/default/default/template/paymentmodule/singleTable.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/singleTable.phtml
@@ -13,11 +13,11 @@
         <col width="1" />
         <thead>
             <tr class="headings">
-                <th><?php echo Mage::helper('sales')->__('Ciclos') ?></th>
-                <th><?php echo Mage::helper('catalog')->__('Intervalo') ?></th>
+                <th><?php echo Mage::helper('sales')->__('Cycles') ?></th>
+                <th><?php echo Mage::helper('catalog')->__('Interval') ?></th>
                 <th></th>
-                <th><?php echo Mage::helper('catalog')->__('Desconto') ?></th>
-                <th><?php echo Mage::helper('catalog')->__('Tipo') ?></th>
+                <th><?php echo Mage::helper('catalog')->__('Discount') ?></th>
+                <th><?php echo Mage::helper('catalog')->__('Type') ?></th>
                 <th class="last"><?php echo Mage::helper('catalog')->__('Action') ?></th>
             </tr>
         </thead>
