--- a/app/design/adminhtml/default/default/template/paymentmodule/extras.phtml
+++ b/app/design/adminhtml/default/default/template/paymentmodule/extras.phtml
@@ -6,6 +6,7 @@
     jQuery(document).ready(function()
     {
         window.mundipagg_skin_base_url = '<?php echo $this->getSkinUrl(''); ?>';
+        window.mundipagg_base_url = '<?php echo Mage::getBaseUrl(); ?>';
 
         jQuery('.skin-img').each(function(){
             var src = jQuery(this).attr('src');
