--- a/app/design/adminhtml/default/default/layout/paymentmodule.xml
+++ b/app/design/adminhtml/default/default/layout/paymentmodule.xml
@@ -27,7 +27,7 @@
                     <name>mundipagg/hub.min.js</name>
                 </action>
                 <action method="addJs">
-                    <script>lib/jquery/jquery-1.12.0.min.js</script>
+                    <script>lib/jquery/mp-jquery-1.12.0.min.js</script>
                 </action>
                 <action method="addJs"><script>lib/jquery/noconflict.js</script></action>
                 <action method="addItem">
