--- a/app/design/frontend/base/default/layout/paymentmodule.xml
+++ b/app/design/frontend/base/default/layout/paymentmodule.xml
@@ -7,6 +7,9 @@
                 <type>skin_css</type>
                 <name>css/paymentmodule.css</name>
             </action>
+            <action method="addJs">
+                <script>lib/jquery/mp-jquery-1.12.0.min.js</script>
+            </action>
         </reference>
 
         <reference name="before_body_end">
